using System;
using System.Collections.Generic;
using System.Text;

namespace Interpreter
{
    class Context
    {
        public string Output { get; set; }
    }
}
